# Simple-Life-Simulator

./: CMakeLists.txt  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Food.cpp  Food.h  Includes.h  Shelter.cpp  Shelter.h  main.cpp
